--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,12 +2,11 @@ name: Deploy to S3 and Invalidate CloudFront
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'deploy-*'   # Only trigger when a tag like deploy-* is pushed
 
 jobs:
   deploy:
-    if: contains(github.event.head_commit.message, '[deploy]')
     runs-on: ubuntu-latest
 
     steps:
